# ubilux

./: .dockerignore  .env-test  .gcloudignore  .gitignore  .isort.cfg  .pre-commit-config.yaml  Dockerfile  add_envs_to_appengine_config.py  app.yml.example  docker-compose.local.yml  docker-compose.production.yml  docker-compose.test.yml  docker-compose.yml  main.py  nginx.conf  pyproject.toml  requirements.txt  settings.py  ubilux-backend-app.yml
.semaphore/: deploy.yml  semaphore.yml
app/: handlers.py  redis_utils.py  router.py
nginx/: Dockerfile  nginx-selfsigned.crt  nginx-selfsigned.key  nginx.conf
tests/: conftest.py  test_connection.py  test_custom_router.py
