[tool.poetry]
name = "ubilux"
version = "0.1.0"
description = ""
authors = ["umatbro <umatbroo@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
sanic = "^19.9"
python-dotenv = "^0.10.3"
python-decouple = "^3.1"
redis = "^3.3"

[tool.poetry.dev-dependencies]
pytest = "^3.0"
pre-commit = "^1.18"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
